Add Last Connected/Disconnected Time #21
